Fixed z-index in Services/Services section

--- a/client/src/components/AboutPage/AboutSlider/AboutSlider.module.scss
+++ b/client/src/components/AboutPage/AboutSlider/AboutSlider.module.scss
@@ -37,7 +37,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    box-shadow: 8px 8px 45px 0 rgba(0, 0, 0, 0.25);
 
     @include smScreenMedia {
       padding: 20px;
